<resources>

    <string name="app_name">Kimuka</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_menu_user_profile">User profile</string>
    <string name="main_menu_sign_out">Sign out</string>

    <string name="sign_in_title">Sign in</string>

    <string name="availability_list_title_all">Buddies</string>
    <string name="availability_list_title_my">Me</string>
    <string name="availability_list_filter">Filter</string>

    <string name="request_list_title_received">Inbox</string>
    <string name="request_list_title_sent">Sent</string>

    <string name="availability_title_new">Create availability</string>
    <string name="availability_title_edit">Edit availability</string>
    <string name="availability_title_view">Availability</string>
    <string name="availability_partner_title">Partner</string>
    <string name="availability_location">Location</string>
    <string name="availability_location_hint">Select location</string>
    <string name="availability_start_time">From</string>
    <string name="availability_end_time">To</string>
    <string name="availability_activity">Activity</string>
    <string name="availability_activity_hint">What would you like to do?</string>
    <string name="availability_need_partner">Need partner</string>
    <string name="availability_need_partner_hint">Do you need partner?</string>
    <string name="availability_can_belay">Can belay</string>
    <string name="availability_can_belay_hint">Can you belay?</string>
    <string name="availability_no_partner">Without partner</string>
    <string name="availability_no_partner_hint">What do you do without partner?</string>
    <string name="availability_shared_equipment">Shared equipment</string>
    <string name="availability_shared_equipment_hint">Select shared equipment</string>
    <string name="availability_note">Note</string>
    <string name="availability_note_hint">Write extra info here (max 200 characters)</string>
    <string name="availability_my_availabilities">My availabilities</string>
    <string name="availability_done">Done</string>
    <string name="availability_send_request">Send request</string>
    <string name="availability_cancel">Cancel availability</string>
    <string name="availability_error_missing_location">Location missing</string>
    <string name="availability_error_bad_time">Start-time must be before end-time</string>
    <string name="availability_error_missing_activity">Activity missing</string>
    <string name="availability_error_missing_need_partner">Do you need partner?</string>
    <string name="availability_error_missing_no_partner">What do you do without partner?</string>

    <string name="activity_dialog_title">Activities</string>
    <!-- NOTE: Keep this in sync with Availability.ACTIVITY_* constants! -->
    <string-array name="activities">
        <item>Top rope</item>
        <item>Lead</item>
        <item>Trad</item>
        <item>Bouldering</item>
    </string-array>

    <string name="need_partner_dialog_title">Need partner</string>
    <string-array name="need_partner_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="if_no_partner_dialog_title">Without partner</string>
    <string-array name="no_partner_options">
        <item>I go anyway</item>
        <item>I don\'t go</item>
        <item>Not decided yet</item>
    </string-array>

    <string name="shared_equipment_dialog_title">Shared equipment</string>
    <!-- NOTE: Keep this in sync with Availability.EQUIPMENT_* constants! -->
    <string-array name="shared_equipments">
        <item>Rope</item>
        <item>ATC</item>
        <item>GriGri</item>
        <item>Carabiners</item>
        <item>Quick draws</item>
        <item>Friends</item>
        <item>Slings</item>
    </string-array>

    <string name="free_climbing_grade_dialog_title">Free climbing grade</string>
    <string name="bouldering_grade_dialog_title">Bouldering grade</string>

    <string name="can_belay_dialog_title">Can you belay?</string>
    <string-array name="can_belay_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="user_profile_title">Profile</string>
    <string name="user_profile_name">Name</string>
    <string name="user_profile_can_belay">Can belay</string>
    <string name="user_profile_grade_free_climbing">Free climbing grade</string>
    <string name="user_profile_grade_bouldering">Bouldering grade</string>
    <string name="user_profile_note">Note</string>
    <string name="user_profile_note_hint">Add extra info about yourself.</string>

    <string name="request_title_new">Send request</string>
    <string name="request_title_view">Request</string>
    <string name="request_partner_title">Partner</string>
    <string name="request_location_title">Location</string>
    <string name="request_start_time_title">From</string>
    <string name="request_end_time_title">To</string>
    <string name="request_activity_title">Activity</string>
    <string name="request_activity_hint">What would you like to do?</string>
    <string name="request_can_belay_title">Can belay</string>
    <string name="request_can_belay_hint">Can you belay?</string>
    <string name="request_shared_equipment_title">Shared equipment</string>
    <string name="request_shared_equipment_hint">Select shared equipment</string>
    <string name="request_note_title">Note</string>
    <string name="request_note_hint">Write extra info here (max 200 characters)</string>
    <string name="request_send_request">Send request</string>
    <string name="request_cancel_request">Cancel request</string>
    <string name="request_reject_request">Reject request</string>
    <string name="request_accept_request">Accept request</string>
    <string name="request_error_bad_time">Your time must overlap with your partner</string>
    <string name="request_error_missing_activity">Activity missing</string>
    <string name="request_error_missing_common_activity">No common activity with partner</string>

    <string name="filter_title_new">New filter</string>
    <string name="filter_reset">Reset filter</string>
    <string name="filter_save">Save filter</string>
    <string name="filter_delete">Delete filter</string>
    <string name="filter_name_title">Filter name</string>
    <string name="filter_partner_title">Partner</string>
    <string name="filter_partner_hint">Select partner</string>
    <string name="filter_location_title">Location</string>
    <string name="filter_location_hint">Select location</string>
    <string name="filter_error_missing_name">Filter name missing</string>
    <string name="filter_error_bad_time">Start-time must be before end-time</string>

    <string name="filter_dialog_title">Filters</string>
    <string name="filter_dialog_no_filter">No filter</string>
    <string name="filter_dialog_new_filter">New filter…</string>

    <string name="user_picker_dialog_title">Select a partner</string>
    <string name="user_picker_dialog_partner_name_hint">Filter by name</string>

</resources>
