<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_send_request"
        android:title="@string/request_send_request"
        android:icon="@drawable/ic_send"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_cancel_request"
        android:title="@string/request_cancel_request"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_accept_request"
        android:title="@string/request_accept_request"
        android:icon="@drawable/ic_thumb_up"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_reject_request"
        android:title="@string/request_reject_request"
        android:icon="@drawable/ic_thumb_down"
        app:showAsAction="always"/>

</menu>
