<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.feheren_fekete.kimuka.AddAvailabilityFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/partner_title"
            android:text="@string/request_partner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/partner_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/location_title"
            android:text="@string/request_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/location_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/start_datetime_title"
            android:text="@string/request_start_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/start_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            <TextView
                android:id="@+id/start_time_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <TextView
            android:id="@+id/end_datetime_title"
            android:text="@string/request_end_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/end_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            <TextView
                android:id="@+id/end_time_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_title"
            android:text="@string/request_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/activity_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:hint="@string/request_activity_hint"/>

        <TextView
            android:id="@+id/can_belay_title"
            android:text="@string/request_can_belay_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/can_belay_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:hint="@string/request_can_belay_hint"/>

        <TextView
            android:id="@+id/shared_equipment_title"
            android:text="@string/request_shared_equipment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/shared_equipment_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"
            android:hint="@string/request_shared_equipment_hint"/>

        <TextView
            android:id="@+id/note_title"
            android:text="@string/add_availability_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/note_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences|textMultiLine"
            android:ems="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLength="200"
            android:hint="@string/request_note_hint"
            android:gravity="top|start"
            />

    </LinearLayout>

</ScrollView>
